--- a/frontend/Layout/MainLayout.razor
+++ b/frontend/Layout/MainLayout.razor
@@ -6,11 +6,11 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">Acerca de</a>
         </div>
 
         <article class="content px-4">
-            @Body
+            @Body <!--Aqui se renderiza el Index.razor o cualquier otra pagina que utiliza este layout-->
         </article>
     </main>
 </div>
