--- a/frontend/Pages/Index.razor
+++ b/frontend/Pages/Index.razor
@@ -5,7 +5,7 @@
 @inject CustomAuthStateProvider AuthStateProvider
 @inject NavigationManager Navigation
 
-<h3>Dashboard</h3>
+<h3>PAGINA PRINCIPAL</h3>
 
 @if (IsLoading)
 {
