--- a/frontend/Layout/NavMenu.razor
+++ b/frontend/Layout/NavMenu.razor
@@ -28,12 +28,12 @@
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
+    private bool collapseNavMenu = false;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
-    {
+    {   
         collapseNavMenu = !collapseNavMenu;
     }
 }
